--- a/styles.css
+++ b/styles.css
@@ -72,11 +72,19 @@ body{
     flex-direction: column ;
 }
 .foto-perfil{
-    width: 350px;
-    height:  350px;
-    box-shadow: 0 0 20px rgba(79, 70, 229, 0.3);
-    border-radius: 50%;
-    border: 4px solid var(--vidro);
+    width: 250px; /* Ajuste o tamanho conforme necessário */
+    height: 250px;
+    object-fit: cover; /* Garante que a foto não estique */
+    border-radius: 50%; /* Faz o círculo */
+    border: 4px solid #1a1a2e; /* Uma borda para dar destaque */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Sombra para profundidade */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+}
+.foto-perfil:hover {
+    transform: scale(1.05); /* Aumenta levemente */
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+    border-color: #510252; /* Muda a cor da borda no hover */
 }
 
 h1{
